WIP: cursor movement

--- a/priv/static/websocket.html
+++ b/priv/static/websocket.html
@@ -35,7 +35,7 @@
 
   </script>
   <style>
-    #results {background: black}
+    #results {background: black; color: white}
   </style>
 </head>
 <body>
